--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Vulkan-Headers"]
 	path = Vulkan-Headers
 	url = git://github.com/KhronosGroup/Vulkan-Headers
+[submodule "vkd3d"]
+	path = vkd3d
+	url = git://source.winehq.org/git/vkd3d.git
