--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = git://github.com/KhronosGroup/Vulkan-Headers
 [submodule "vkd3d"]
 	path = vkd3d
-	url = git://source.winehq.org/git/vkd3d.git
+	url = git://github.com/HansKristian-Work/vkd3d.git
