Add dxil.c to compile targets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ if (dxil_spirv_c_shared_FOUND)
 	message("Found DXIL2SPIRV! Enabling DXIL support.")
 	target_link_libraries(vkd3d-shader PRIVATE dxil-spirv-c-shared)
 	target_compile_definitions(vkd3d-shader PRIVATE HAVE_DXIL_SPV)
+	target_sources(vkd3d-shader PRIVATE vkd3d/libs/vkd3d-shader/dxil.c)
 else()
 	message("Did not find DXIL2SPIRV :( Disabling DXIL support.")
 endif()
